--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -103,5 +103,6 @@
 
     <!-- ThreadActivity -->
     <string name="In_reply_to_">In reply to:</string>
+    <string name="Last_messages">Last messages</string>
 
 </resources>
