--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -106,5 +106,6 @@
     <string name="In_reply_to_">In reply to:</string>
     <string name="Last_messages">Last messages</string>
     <string name="ReallyFilterOut">Really filter out user?</string>
+    <string name="ResumingFromLastTime"><![CDATA[<< resuming from last time >>]]></string>
 
 </resources>
