--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -107,6 +107,9 @@
     <string name="In_reply_to_">In reply to:</string>
     <string name="Message_List">Messages list</string>
     <string name="ReallyFilterOut">Really filter out user?</string>
+    <string name="ReallyRecommend">Really recommend message?</string>
+    <string name="ReallySubscribe">Really subscribe to user?</string>
+    <string name="ReallyBlacklist">Really blacklist user?</string>
     <string name="ResumingFromLastTime"><![CDATA[<< resuming from last time >>]]></string>
     <string name="EditFilters">List of filtered out users</string>
     <string name="Show_Numbers">Show message number</string>
@@ -114,5 +117,7 @@
     <string name="Message_numbers_will_be_shown">Message and reply numbers will be shown</string>
     <string name="Save_position">Save position</string>
     <string name="Message_font_scale_factor">Message font scale factor</string>
+    <string name="Confirm_asctions">Confirm actions</string>
+    <string name="Such_as_blacklist_recommend">...such as blacklist, recommend etc</string>
 
 </resources>
