error reporting and misc stuff

--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -99,8 +99,11 @@
     <string name="Password">Пароль</string>
     <string name="Notifications">Уведомления</string>
     <string name="Refresh_interval">Интервал обновления</string>
+    <string name="Compressed_Menu">Уплотненное меню сообщения</string>
+    <string name="Compressed_Menu_Summary">На экран поместится больше пунктов меню</string>
     <string name="Appearance">Внешний вид</string>
     <string name="Theme">Тема оформления</string>
+    <string name="Menu_font_scale_factor">Размер шрифта меню сообщения</string>
 
     <!-- ThreadActivity -->
     <string name="In_reply_to_">В ответ на:</string>
