--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -44,6 +44,7 @@
     <string name="Popular_tags">Popular tags</string>
     <string name="All_messages">All messages</string>
     <string name="Nearby_places">Nearby places</string>
+    <string name="My_blog">My blog</string>
 
     <!-- JuickMessageMenu -->
     <string name="Recommend_message">Recommend message</string>
@@ -131,5 +132,8 @@
     <string name="Incoming_Events">Incoming events</string>
     <string name="XMPPControl">XMPP control</string>
     <string name="Compressed_Menu_Summary">More items in message menu will fit on the screen</string>
+    <string name="Your_User_Name">Your Juick Username</string>
+    <string name="Your_User_Name_Explain">Juick API does not provide means to know your Nickname. Please enter the Nickname to detect your user id.
+    </string>
 
 </resources>
