* fixed message remembering and refresh properly + XMPP "ON" command is configurable * unsubscribe/subscribe renamed * fixed color for Loading command + JUBO messages parsing

--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -48,10 +48,12 @@
     <!-- JuickMessageMenu -->
     <string name="Recommend_message">Рекомендовать сообщение</string>
     <string name="Subscribe_to">Подписаться на</string>
+    <string name="Toggle_Subscription_to">Перекл.подписку на</string>
     <string name="Blacklist">Добавить в черный список</string>
     <string name="FilterOutUser">Не показывать</string>
     <string name="Recommended">Рекомендовано</string>
     <string name="Subscribed">Подписано</string>
+    <string name="Changed">Изменено</string>
     <string name="Added_to_BL">Добавлено в черный список</string>
     <string name="Are_you_sure_recommend">Вы уверены, что хотите рекомендовать?</string>
     <string name="Are_you_sure_subscribe">Вы уверены, что хотите подписаться?</string>
