--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -121,4 +121,13 @@
     <string name="Your_User_Name_Explain">Juick API не предоставляет известного способа для получения вашего Nickname. Введите ваш Nickname для определения по нему вашего Id.
     </string>
 
+    <string name="navigationSubscriptions">Подписки</string>
+    <string name="navigationAll">Все сообщения</string>
+    <string name="navigationTop">Популярные</string>
+    <string name="navigationPhoto">С фото</string>
+    <string name="navigationMy">Мой блог</string>
+    <string name="navigationSrachiki">Срачики</string>
+    <string name="navigationUnread">Все-нечитанные</string>
+
+
 </resources>
