--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -129,6 +129,7 @@
     <string name="navigationMy">Мой блог</string>
     <string name="navigationSrachiki">Срачики</string>
     <string name="navigationUnread">Все-нечитанные</string>
+    <string name="navigationSaved">Сохраненные</string>
 
 
 </resources>
