--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -156,7 +156,7 @@
     <string name="navigationTop">Top messages</string>
     <string name="navigationPhoto">With photos</string>
     <string name="navigationMy">My blog</string>
-    <string name="navigationSrachiki">Srachiki</string>
+    <string name="navigationSrachiki">Srachiki (jugregator)</string>
     <string name="navigationUnread">All-unread</string>
     <string name="navigationSaved">Saved messages</string>
 
