--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -159,5 +159,57 @@
     <string name="navigationSrachiki">Srachiki (jugregator)</string>
     <string name="navigationUnread">All-unread</string>
     <string name="navigationSaved">Saved messages</string>
+    <string name="SingleLine_Menu">Single line menu items</string>
+    <string name="SingleLine_Menu_Summary">Menu will be even more compact</string>
+    <string name="XMPP_client">XMPP client</string>
+    <string name="XMPP_config">XMPP config</string>
+    <string name="XMPP_enabled">XMPP enabled</string>
+    <string name="Not_set_up">Not set up</string>
+    <string name="Activate_when_finished">Activate it after you finished setting up account details</string>
+    <string name="Send_on_command">Send \'ON\' command after connect?</string>
+    <string name="VerboseEventNotifications">Verbose event notifications</string>
+    <string name="ChooseSound">Choose sound</string>
+    <string name="SoundEnabled">Sound enabled</string>
+    <string name="VibrationEnabled">Vibration enabled</string>
+    <string name="LEDEnabled">LED enabled</string>
+    <string name="VibrationInCurrentThread">Vibration in current thread</string>
+    <string name="LoadImages">Load images</string>
+    <string name="OnOffProxy">off / full / proxy ?</string>
+    <string name="LoadImageMode">Load image mode</string>
+    <string name="ImageProxyLogin">Image Proxy login</string>
+    <string name="ImageProxyPassword">Image Proxy password</string>
+    <string name="DaysToKeepCachedImages">Days to keep cached images</string>
+    <string name="ImageHeight">Image height (% of screen)</string>
+    <string name="MarkAlreadyReadImages">Mark already read messages</string>
+    <string name="EnableLocalStorage">Enable local storage</string>
+    <string name="ForBetterLife">..for better life</string>
+    <string name="DaysToKeepStoredMessages">Days to keep stored messages</string>
+    <string name="EnableFontScaleByGesture">Enable fonts scale by gesture</string>
+    <string name="UserIdForMyBlog">User ID for \'My Blog\'</string>
+    <string name="LeaveItEmptyIfUnknown">Leave it empty if unknown</string>
+    <string name="PrefetchMoreMessages">Prefetch more messages</string>
+    <string name="AndNeverSeeLoading">...and never see `loading..`</string>
+    <string name="PreviewRepliesBeforeSend">Preview your replies before send</string>
+    <string name="WarnRepliesWithoutReplyTo">Warn replies without \'In-reply-to\'?</string>
+    <string name="CapitalizeReplyText">Auto-capitalize reply text</string>
+    <string name="AccuracyOfLocation">Accuracy of location</string>
+    <string name="WhenReplying">..when replying</string>
+    <string name="CameraCapture">Camera capture</string>
+    <string name="CaptureIntoTempFile">Capture into temp file (bugfix)</string>
+    <string name="Debug">Debug</string>
+    <string name="EnableDiagnosticMessages">Enable diagnostic messages</string>
+    <string name="CommonBackground">Common background</string>
+    <string name="CommonForeground">Common foreground</string>
+    <string name="ListDivider">List divider</string>
+    <string name="Usernames">Usernames</string>
+    <string name="UserNamesRead">Usernames (read msgs)</string>
+    <string name="URLs">URLs</string>
+    <string name="MessageIDs">Message IDs</string>
+    <string name="NumberOfrComments">Number of comments</string>
+    <string name="TranslatedLabel">``Translated`` label</string>
+    <string name="Dates">Dates</string>
+    <string name="MessageSources">Message sources</string>
+    <string name="SetupXMPP">Setup XMPP...</string>
+    <string name="Presets_">Presets:</string>
 
 </resources>
